# saritasa-fastapi-rest-framework

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml  tasks.py
.github/: settings.yaml
.github/workflows/: checks.yaml
example_app/: __init__.py  config.py  db.py  dependencies.py  models.py  repositories.py  security.py
example_app/interactors/: __init__.py  core.py  test_models.py
example_app/schemas/: __init__.py  soft_delete_test_model.py  test_models.py
example_app/validators/: __init__.py  test_models.py
example_app/views/: __init__.py  core.py  guarded_endpoint.py  s3.py  soft_delete_test_model.py  test_model.py
fastapi_rest_framework/: __init__.py  common_types.py  exception_handlers.py  exceptions.py  jwt.py  metrics.py  testing.py
fastapi_rest_framework/interactors/: __init__.py  core.py
fastapi_rest_framework/jwt/: __init__.py  core.py  sentry.py
fastapi_rest_framework/permissions/: __init__.py  core.py  dependencies.py  types.py
fastapi_rest_framework/repositories/: __init__.py  protocol.py
fastapi_rest_framework/s3/: __init__.py  context_mixins.py  interactors.py  permissions.py  schemas.py  testing.py  utils.py  validators.py  views.py
fastapi_rest_framework/sqlalchemy/: __init__.py  dependencies.py  filters.py  interactor.py  repositories.py  views.py
fastapi_rest_framework/testing/: __init__.py  plugin.py  tools.py  types.py
fastapi_rest_framework/validators/: __init__.py  api_model.py  base.py  core.py  repositories.py  schemas.py  types.py
fastapi_rest_framework/views/: __init__.py  action.py  actions.py  base.py  constants.py  core.py  create.py  delete.py  detail.py  filters.py  list.py  schemas.py  types.py  update.py
tests/: conftest.py  factories.py  shortcuts.py  test_action.py  test_auth.py  test_create.py  test_delete.py  test_detail.py  test_list.py  test_permissions.py  test_s3.py  test_update.py  test_validation.py
